--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@iconify-json/lucide": "^1.2.74",
     "@iconify-json/simple-icons": "^1.2.59",
     "@nuxt/ui": "^4.2.1",
-    "nuxt": "^4.2.1"
+    "@vueuse/nuxt": "14.0.0",
+    "nuxt": "^4.2.1",
+    "replicate": "^1.4.0",
+    "vue": "^3.5.23"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.10.0",
     "eslint": "^9.39.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.5"
   },
